--- a/render.yaml
+++ b/render.yaml
@@ -1,15 +1,29 @@
 services:
+  # ---------------------------
+  # Frontend (React / Vue)
+  # ---------------------------
+  - type: static_site
+    name: pmis-frontend
+    env: static
+    buildCommand: npm install && npm run build
+    staticPublishPath: frontend/build
+    pullRequestPreviewsEnabled: true
+
+  # ---------------------------
+  # Backend (FastAPI + OpenAI)
+  # ---------------------------
   - type: web
-    name: pmis-ai-internship-optimized
+    name: pmis-backend
     env: docker
-    plan: free
-    branch: main
-    buildCommand: docker build -t pmis-ai-internship-optimized .
-    startCommand: docker run -p 8000:8000 pmis-ai-internship-optimized
+    dockerfilePath: ./Dockerfile
+    autoDeploy: true
+    plan: free   # change to starter/standard if you need more CPU/RAM
+
     envVars:
-      - key: EMBEDDING_MODEL
-        value: all-MiniLM-L6-v2
-      - key: EMBEDDING_INDEX_DIR
-        value: /app/data
-      - key: PMIS_BASE_URL
-        value: mock
+      - key: PYTHONUNBUFFERED
+        value: "1"
+      - key: ENV
+        value: "production"
+      # Add API keys only via Render dashboard (not in file):
+      # - key: OPENAI_API_KEY
+      #   sync: false
